--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
     <!-- start navbar -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light shadow sticky-top p-3">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top p-3 ">
         <div class="container-fluid">
             <!-- Logo -->
             <a class="navbar-brand m-2 p-2" href="#">
@@ -41,7 +41,7 @@
                         <a class="nav-link" href="reservation.html">Reservation</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Gallery</a>
+                        <a class="nav-link" href="gallery.html">Gallery</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="about.html">About</a>
@@ -918,6 +918,6 @@
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Custom JS -->
-    <script src="script.js"></script>
+    <script src="/script.js"></script>
 </body>
 </html>
