--- a/blog.html
+++ b/blog.html
@@ -240,7 +240,7 @@
                     </div>
                 </div>
             </div>
-            <nav aria-label="Page navigation example">
+            <nav aria-label="Page navigation example z-n1">
                 <ul class="pagination m-3">
                     <li class="active page-item m-2"><a class="page-link" href="#">1</a></li>
                     <li class="page-item m-2"><a class="page-link" href="#">2</a></li>
