--- a/gallery.html
+++ b/gallery.html
@@ -180,7 +180,7 @@
                     </a>    
                 </div>
             </div>
-            <nav aria-label="Page navigation example text-center">
+            <nav aria-label="Page navigation example text-center z-n1">
                 <ul class="pagination m-lg-5 mx-auto">
                     <li class="active page-item m-2"><a class="page-link" href="#">1</a></li>
                     <li class="page-item m-2"><a class="page-link" href="#">2</a></li>
